Fixed contrast ratio for AAA

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,11 @@ nav li {
 
 a:link {
     text-decoration: none;
+    color: black;
+}
+
+a:visited {
+    color: black;
 }
 
 h1, h2, h3, h4, h5, h6 {
